# python-playwright-globalsqa

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: playwright.yml
scripts/: docker-run.sh  docker-stop.sh  fix.sh
tests/: conftest.py
tests/e2e/: test_customers.py  test_example_async.py  test_manager.py
tests/pages/: AddCustomer.py  CreateNewCustomer.py  DetailsCustomer.py  ListCostumers.py  Login.py  LoginCustomer.py  LoginManager.py  OpenAccount.py  __init__.py
tests/pages/base/: Currency.py  Login.py  Reporter.py
tests/pages/customer/: DetailsCustomer.py  LoginCustomer.py
tests/pages/manager/: AddCustomer.py  ListCustomers.py  LoginManager.py  OpenAccount.py
